--- a/Signal/translations/fa.lproj/PluralAware.stringsdict
+++ b/Signal/translations/fa.lproj/PluralAware.stringsdict
@@ -554,7 +554,7 @@
 			<key>one</key>
 			<string>‏%1$d عضو گروه نام یکسان دارد، عضو را در پایین مرور کنید یا اقدام لازم را انجام دهید.</string>
 			<key>other</key>
-			<string>‏%1$d عضو گروه نام‌های یکسان دارند، اعضا را در پایین مرور کنید یا اقدام لازم را انجام دهید.</string>
+			<string>‏%1$d عضو گروه نام‌های یکسان دارند. اعضای زیر را بررسی کنید یا اقدام لازم را انجام دهید.</string>
 		</dict>
 	</dict>
 	<key>GROUP_MEMBER_COUNT_LABEL_%d</key>
