--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,7 +1,7 @@
 We’re introducing new ways to keep your phone number private on Signal.
 
-• Your phone number will no longer be visible to anyone on the latest version of Signal unless they have it saved in their phone’s contacts. You can change this in Settings.
+• لن يبقى رقم هاتفك مرئيًا لأي أحد في آخر إصدار من سيجنال إلاّ إذا كان مسجلاً على هاتفه في جهات اتصاله. يُمكنك تغيير هذا في إعدادات سيجنال.
 
-• You can now set and share an optional username to let people chat with you without giving them your phone number.
+• يمكنك الآن إعداد ومشاركة اسم مستخدم اختياري لتُتيح للناس الدردشة دون إعطائهم رقم هاتفك.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• A new privacy setting lets you control who can find you by your phone number on Signal.
