--- a/fastlane/metadata/cs/release_notes.txt
+++ b/fastlane/metadata/cs/release_notes.txt
@@ -1,7 +1,8 @@
 We’re introducing new ways to keep your phone number private on Signal.
 
-• Your phone number will no longer be visible to anyone on the latest version of Signal unless they have it saved in their phone’s contacts. You can change this in Settings.
+• Vaše telefonní číslo už v nejnovější verzi Signal nikdo neuvidí, jestliže ho nemá uložené v kontaktech telefonu. Změnit to můžete v nastavení.
 
-• You can now set and share an optional username to let people chat with you without giving them your phone number.
+• Nyní si lze nastavit a sdílet volitelné uživatelské jméno, pomocí kterého se lidé s vámi mohou spojit, aniž by potřebovali znát vaše telefonní číslo.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+
+• A new privacy setting lets you control who can find you by your phone number on Signal.
