--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,7 +1,7 @@
 We’re introducing new ways to keep your phone number private on Signal.
 
-• Your phone number will no longer be visible to anyone on the latest version of Signal unless they have it saved in their phone’s contacts. You can change this in Settings.
+• Dit telefonnummer vil ikke længere være synligt for nogen med den seneste version af Signal, medmindre de har gemt nummeret i telefonens kontakter. Du kan ændre dette under Indstillinger.
 
-• You can now set and share an optional username to let people chat with you without giving them your phone number.
+• Nu kan du indstille og dele et brugernavn, så du kan kontaktes uden at du behøver give dit telefonnummer.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• A new privacy setting lets you control who can find you by your phone number on Signal.
