--- a/fastlane/metadata/el/release_notes.txt
+++ b/fastlane/metadata/el/release_notes.txt
@@ -1,7 +1,7 @@
 We’re introducing new ways to keep your phone number private on Signal.
 
-• Your phone number will no longer be visible to anyone on the latest version of Signal unless they have it saved in their phone’s contacts. You can change this in Settings.
+• Ο αριθμός σου δεν θα είναι πλέον ορατός σε κανέναν στην τελευταία έκδοση Signal, εκτός αν τον έχει αποθηκεύσει στις επαφές του. Μπορείς να το αλλάξεις στις Ρυθμίσεις.
 
-• You can now set and share an optional username to let people chat with you without giving them your phone number.
+• Μπορείς να ορίσεις και να μοιραστείς ένα προαιρετικό όνομα χρήστη για να μπορούν να συνομιλούν μαζί σου χωρίς να μοιραστείς τον αριθμό σου.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• A new privacy setting lets you control who can find you by your phone number on Signal.
