--- a/fastlane/metadata/fi/release_notes.txt
+++ b/fastlane/metadata/fi/release_notes.txt
@@ -1,7 +1,7 @@
 We’re introducing new ways to keep your phone number private on Signal.
 
-• Your phone number will no longer be visible to anyone on the latest version of Signal unless they have it saved in their phone’s contacts. You can change this in Settings.
+• Signalin uusimmassa versiossa puhelinnumerosi ei enää näy kenellekään, ellei sitä ole tallennettu vastaanottajan yhteystietoihin. Voit muuttaa tämän asetuksissa.
 
-• You can now set and share an optional username to let people chat with you without giving them your phone number.
+• Voit nyt määrittää valinnaisen käyttäjätunnuksen ja jakaa sen, jotta ihmiset voivat keskustella kanssasi näkemättä puhelinnumeroasi.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• A new privacy setting lets you control who can find you by your phone number on Signal.
