--- a/fastlane/metadata/fr-CA/release_notes.txt
+++ b/fastlane/metadata/fr-CA/release_notes.txt
@@ -1,7 +1,7 @@
 We’re introducing new ways to keep your phone number private on Signal.
 
-• Your phone number will no longer be visible to anyone on the latest version of Signal unless they have it saved in their phone’s contacts. You can change this in Settings.
+• Les utilisateurs disposant de la dernière version de l’appli n’ont désormais plus accès à votre numéro, à moins qu’ils l’aient enregistré dans leurs contacts. Vous pouvez modifier ces préférences dans les Paramètres.
 
-• You can now set and share an optional username to let people chat with you without giving them your phone number.
+• Vous pouvez aussi définir et partager un nom d’utilisateur facultatif, afin de discuter sans communiquer votre numéro.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• A new privacy setting lets you control who can find you by your phone number on Signal.
