--- a/fastlane/metadata/he/release_notes.txt
+++ b/fastlane/metadata/he/release_notes.txt
@@ -1,7 +1,7 @@
 We’re introducing new ways to keep your phone number private on Signal.
 
-• Your phone number will no longer be visible to anyone on the latest version of Signal unless they have it saved in their phone’s contacts. You can change this in Settings.
+• מספר הטלפון שלך כבר לא יהיה גלוי לאף אחד בגרסה האחרונה של Signal, אלא אם כן המספר שמור ברשימת אנשי הקשר שלו או שלה. אפשר לשנות את זה בהגדרות.
 
-• You can now set and share an optional username to let people chat with you without giving them your phone number.
+• מעכשיו אפשר להגדיר ולשתף שם משתמש אופציונלי כדי לאפשר לאנשים לשוחח איתך בצ׳אט מבלי לתת להם את מספר הטלפון שלך.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• A new privacy setting lets you control who can find you by your phone number on Signal.
