--- a/fastlane/metadata/id/release_notes.txt
+++ b/fastlane/metadata/id/release_notes.txt
@@ -1,7 +1,7 @@
 We’re introducing new ways to keep your phone number private on Signal.
 
-• Your phone number will no longer be visible to anyone on the latest version of Signal unless they have it saved in their phone’s contacts. You can change this in Settings.
+• Nomor telepon Anda tidak akan terlihat lagi oleh siapa pun di Signal versi terbaru kecuali jika nomor telepon tersebut tersimpan di kontak telepon mereka. Anda bisa mengubah ini di pengaturan.
 
-• You can now set and share an optional username to let people chat with you without giving them your phone number.
+• Kini Anda bisa buat dan berbagi nama pengguna opsional agar orang bisa mengobrol dengan Anda tanpa berbagi nomor.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• A new privacy setting lets you control who can find you by your phone number on Signal.
