--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,7 +1,7 @@
 We’re introducing new ways to keep your phone number private on Signal.
 
-• Your phone number will no longer be visible to anyone on the latest version of Signal unless they have it saved in their phone’s contacts. You can change this in Settings.
+• Con l'ultima versione di Signal, il tuo numero non sarà più visibile a nessuno, a meno che qualcuno non lo abbia già tra i propri contatti. Puoi cambiare questa opzione nelle Impostazioni.
 
-• You can now set and share an optional username to let people chat with you without giving them your phone number.
+• Imposta e condividi un nome utente opzionale per consentire alle persone di parlare con te senza dare il tuo numero.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• A new privacy setting lets you control who can find you by your phone number on Signal.
