--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,7 +1,7 @@
 We’re introducing new ways to keep your phone number private on Signal.
 
-• Your phone number will no longer be visible to anyone on the latest version of Signal unless they have it saved in their phone’s contacts. You can change this in Settings.
+• 최신 버전 Signal에서는 내 전화번호를 연락처에 저장한 사람을 제외하고 더 이상 다른 사람에게 내 전화번호가 표시되지 않습니다. 설정에서 이 옵션을 변경할 수 있습니다.
 
-• You can now set and share an optional username to let people chat with you without giving them your phone number.
+• 이제 선택적 사용자 이름을 설정하고 공유하여 전화번호를 공유하지 않고 다른 사람과 대화할 수 있습니다.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• A new privacy setting lets you control who can find you by your phone number on Signal.
