--- a/fastlane/metadata/ms/release_notes.txt
+++ b/fastlane/metadata/ms/release_notes.txt
@@ -1,7 +1,7 @@
 We’re introducing new ways to keep your phone number private on Signal.
 
-• Your phone number will no longer be visible to anyone on the latest version of Signal unless they have it saved in their phone’s contacts. You can change this in Settings.
+• Nombor telefon anda tidak akan kelihatan kepada sesiapa pada versi terkini Signal melainkan mereka menyimpannya dalam kenalan telefon. Anda boleh tukar ini dalam Tetapan.
 
-• You can now set and share an optional username to let people chat with you without giving them your phone number.
+• Anda kini boleh tetapkan dan kongsi nama pengguna untuk bersembang tanpa memberi nombor telefon anda.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• A new privacy setting lets you control who can find you by your phone number on Signal.
