--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,7 +1,7 @@
 We’re introducing new ways to keep your phone number private on Signal.
 
-• Your phone number will no longer be visible to anyone on the latest version of Signal unless they have it saved in their phone’s contacts. You can change this in Settings.
+• In de nieuwste Signal-versie is je telefoonnummer voor niemand meer zichtbaar, tenzij ze het hebben opgeslagen in de contacten van hun telefoon. Dit kun je wijzigen in Instellingen.
 
-• You can now set and share an optional username to let people chat with you without giving them your phone number.
+• Je kunt nu een optionele gebruikersnaam instellen en delen, zodat mensen met je kunnen chatten zonder je telefoonnummer.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• A new privacy setting lets you control who can find you by your phone number on Signal.
