--- a/fastlane/metadata/pt-PT/release_notes.txt
+++ b/fastlane/metadata/pt-PT/release_notes.txt
@@ -1,7 +1,7 @@
 We’re introducing new ways to keep your phone number private on Signal.
 
-• Your phone number will no longer be visible to anyone on the latest version of Signal unless they have it saved in their phone’s contacts. You can change this in Settings.
+• Na versão mais recente do Signal, o seu número já não será visível para toda a gente, a menos que esteja guardado nos contactos do telemóvel. Pode alterar isto nas Definições.
 
-• You can now set and share an optional username to let people chat with you without giving them your phone number.
+• Pode definir e partilhar um nome de utilizador opcional para as pessoas o contactarem sem ser preciso o seu número.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• A new privacy setting lets you control who can find you by your phone number on Signal.
