--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,7 +1,7 @@
 We’re introducing new ways to keep your phone number private on Signal.
 
-• Your phone number will no longer be visible to anyone on the latest version of Signal unless they have it saved in their phone’s contacts. You can change this in Settings.
+• Numărul tău de telefon nu va mai fi vizibil în cea mai recentă versiune de Signal, cu excepția cazului în care acesta a fost salvat în contactele telefonului. Poți modifica asta din Setări.
 
-• You can now set and share an optional username to let people chat with you without giving them your phone number.
+• Acum poți stabili și trimite un nume de utilizator opțional și să discuți cu oamenii fără a le da numărul tău.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• A new privacy setting lets you control who can find you by your phone number on Signal.
