--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,7 +1,7 @@
 We’re introducing new ways to keep your phone number private on Signal.
 
-• Your phone number will no longer be visible to anyone on the latest version of Signal unless they have it saved in their phone’s contacts. You can change this in Settings.
+• Ваш номер телефона больше никому не будет виден в последней версии Signal, если только он не сохранен в контактах телефона. Вы можете изменить это в Настройках.
 
-• You can now set and share an optional username to let people chat with you without giving them your phone number.
+• Теперь вы можете задать дополнительное имя пользователя и поделиться им, чтобы люди могли общаться с вами, не зная номер вашего телефона.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• A new privacy setting lets you control who can find you by your phone number on Signal.
