--- a/fastlane/metadata/sv/release_notes.txt
+++ b/fastlane/metadata/sv/release_notes.txt
@@ -1,7 +1,7 @@
 We’re introducing new ways to keep your phone number private on Signal.
 
-• Your phone number will no longer be visible to anyone on the latest version of Signal unless they have it saved in their phone’s contacts. You can change this in Settings.
+• I den senaste versionen av Signal kommer ditt telefonnummer inte längre att vara synligt för någon, om de inte har det sparat i telefonens kontakter. Du kan ändra detta i Inställningar.
 
-• You can now set and share an optional username to let people chat with you without giving them your phone number.
+• Du kan nu ange och dela ett valfritt användarnamn så att personer kan chatta med dig utan att behöva ange ditt telefonnummer.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• A new privacy setting lets you control who can find you by your phone number on Signal.
