--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,7 +1,7 @@
 We’re introducing new ways to keep your phone number private on Signal.
 
-• Your phone number will no longer be visible to anyone on the latest version of Signal unless they have it saved in their phone’s contacts. You can change this in Settings.
+• Signal'in en son sürümünde telefon numaran, telefon rehberinde kayıtlı olmadığı sürece artık kimse tarafından görülmez. Bu özelliği Ayarlar'dan değiştirebilirsin.
 
-• You can now set and share an optional username to let people chat with you without giving them your phone number.
+• Artık insanlara telefon numaranı vermeden seninle sohbet etmesine izin vermek için isteğe bağlı bir kullanıcı adı belirleyebilir ve paylaşabilirsin.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• A new privacy setting lets you control who can find you by your phone number on Signal.
