--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,7 +1,7 @@
 We’re introducing new ways to keep your phone number private on Signal.
 
-• Your phone number will no longer be visible to anyone on the latest version of Signal unless they have it saved in their phone’s contacts. You can change this in Settings.
+• Ваш номер більше не відображатиметься для інших користувачів, за винятком тих, хто має його у своїх контактах. Цей параметр можна змінити в налаштуваннях.
 
-• You can now set and share an optional username to let people chat with you without giving them your phone number.
+• Тепер ви можете встановити додаткове ім'я користувача, поділитися ним і розпочати чат, не повідомляючи людині свій номер телефону.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• A new privacy setting lets you control who can find you by your phone number on Signal.
